--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@currents/playwright": "^1.5.6",
+    "@currents/playwright": "1.1.2",
     "@playwright/test": "^1.46.1"
   }
 }
